Modified the code to accommodate more book details such as synopsis.

--- a/views/books/listBooks.handlebars
+++ b/views/books/listBooks.handlebars
@@ -1,7 +1,10 @@
 <h2>My Books</h2>
 <ul>
   {{#each books}}
-    <li>{{this.title}} by {{this.author}}</li>
+    <li>
+      <strong>{{this.title}}</strong> by {{this.author}}
+      <p>{{this.synopsis}}</p>
+    </li>
   {{/each}}
 </ul>
 <a href="/books/add">Add a new book</a>
