--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -1,2 +1,5 @@
-<h1>Welcome to the Book Sharing Platform</h1>
-<p>Share and borrow books within your community.</p>
+<div class="welcome-message">
+    <h1>Welcome to the Book Sharing Platform</h1>
+    <p>Share and borrow books within your community.</p>
+</div>
+
