--- a/views/partials/header.handlebars
+++ b/views/partials/header.handlebars
@@ -1,10 +1,22 @@
-<nav>
-  <a href="/">Home</a>
-  <a href="/auth/login">Login</a>
-  <a href="/auth/signup">Sign Up</a>
-  <a href="/books">Books</a>
-  <a href="/borrow">Borrow Requests</a>
-  <form action="/auth/logout" method="POST">
-    <button type="submit">Logout</button>
-  </form>
-</nav>
+<header>
+  <nav>
+    <div class="logo">
+      <a href="/"><img src="/images/logo.png" alt="Book Sharing Platform Logo"></a>
+    </div>
+    <div class="search-bar">
+      <form action="/search" method="GET">
+        <input type="text" name="query" placeholder="Search books...">
+        <button type="submit">Search</button>
+      </form>
+    </div>
+    <div class="nav-menu">
+      <div class="menu-icon">☰</div>
+      <ul class="nav-links">
+        <li><a href="/books">Home</a></li>
+        <li><a href="">My Profile</a></li>
+        <li><a href="#" id="logout">Logout</a></li>
+      </ul>
+    </div>
+  </nav>
+</header>
+
