Modified the views.

--- a/views/dashboard.handlebars
+++ b/views/dashboard.handlebars
@@ -2,11 +2,11 @@
   <div class="row">
     <div class="col-12">
       <h1 class="mb-4 text-black">Dashboard</h1>
-      <a href="/newpost" class="btn btn-primary">Create a New Blog Post</a>
+      <a href="/newpost" class="btn btn-primary">Add a New Book</a>
     </div>
   </div>
   <br>
-  <h1 class="mb-4 text-black">Skin Script Contributions:</h1>
+  <h1 class="mb-4 text-black">Book Loom Contributions:</h1>
   {{#each posts}}
     <div class="post-container post mb-3">
       <h2><a href="/post/{{id}}" class="text-decoration-none text-reset custom-text-color" style="font-style: italic;">
