--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -2,7 +2,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Skin Script</title>
+    <title>Book Loom</title>
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css"
       rel="stylesheet"
@@ -13,7 +13,7 @@
     <header>
       <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
         <div class="container-fluid">
-          <a class="navbar-brand fs-2" href="/">Skin Script Blog</a>
+          <a class="navbar-brand fs-2" href="/">Book Loom</a>
           <button
             class="navbar-toggler"
             type="button"
