--- a/views/homepage.handlebars
+++ b/views/homepage.handlebars
@@ -1,16 +1,16 @@
 <main class="container mt-5">
-  <h1 class="mb-4 text-black">Book Posts</h1>
+  <h1 class="mb-4 text-black">Library</h1>
   <div class="row">
     {{#each posts}}
       <div class="col-md-4">
         <div class="card mb-3">
           <div class="card-header bg-custom">
             <h2 class="card-title">
-              <a href="/post/{{id}}" class="text-dark">{{title}}</a>
+              <a href="/post/{{id}}" class="text-dark text-decoration-none">{{title}}</a>
             </h2>
           </div>
           <div class="card-body text-dark">
-            <p>Created by: {{user.username}} Date: {{format_date createdAt}}</p>
+            <p>Owner: {{user.username}} Date: {{format_date createdAt}}</p>
           </div>
         </div>
       </div>
