--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -9,11 +9,13 @@
     />
     <link rel="stylesheet" type="text/css" href="/css/dashboard.css" />
   </head>
-  <body class="bg-dark text-white">
+  <body class="bg-dark">
     <header>
-      <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+      <nav class="navbar navbar-expand-lg navbar-dark bg-light-gray text-dark">
         <div class="container-fluid">
-          <a class="navbar-brand fs-2" href="/">Book Loom</a>
+          <a class="navbar-brand fs-2" href="/">
+            <img src="../public/images/book-loom-logo.png" alt="Book Loom Logo" style="height: 40px;">
+          </a>
           <button
             class="navbar-toggler"
             type="button"
