Changed the background.

--- a/public/css/dashboard.css
+++ b/public/css/dashboard.css
@@ -31,7 +31,7 @@
   }
   
   body {
-    background-image: url('/images/white-paper-texture.jpg');
+    background-image: url('/images/white-crumpled.jpg');
     background-position: center center;
     background-repeat: no-repeat;
     background-size: cover;
