change font styling

--- a/public/css/dashboard.css
+++ b/public/css/dashboard.css
@@ -1,3 +1,9 @@
+* {
+  font-family: "Montserrat", sans-serif;
+  font-optical-sizing: auto;
+  font-style: normal;
+}
+
 .post-container {
     transition: background-color 0.3s;
   }
@@ -38,7 +44,7 @@
   }
 
   .bg-custom {
-    background-color: #9AACCC !important;
+    background-color: #71797E !important;
   }
   
   .custom-text-color {
