--- a/views/dashboard.handlebars
+++ b/views/dashboard.handlebars
@@ -2,7 +2,7 @@
   <div class="row">
     <div class="col-12">
       <h1 class="mb-4 text-black">Dashboard</h1>
-      <a href="/newpost" class="btn btn-primary">Add a New Book</a>
+      <a href="/newpost" class="btn btn-secondary">Add a New Book</a>
     </div>
   </div>
   <br>
@@ -14,7 +14,7 @@
       </a></h2>
       <p class="custom-text-color">By: {{author}}</p>
       <p class="text-dark">Owner: {{user.username}} | Date: {{format_date createdAt}}</p>
-      <a href="/editpost/{{id}}" class="btn bg-custom">Edit Book</a>
+      <a href="/editpost/{{id}}" class="btn btn-secondary">Edit Book</a>
       <button class="btn btn-danger delete-post" data-post-id="{{id}}">Delete</button>
     </div>
   {{/each}}
