changed all background color for btn submit

--- a/views/editpost.handlebars
+++ b/views/editpost.handlebars
@@ -30,7 +30,7 @@
         placeholder="Enter Synopsis"
       >{{content}}</textarea>
     </div>
-    <button type="submit" id="update-skin-post" class="btn btn-primary">Update Post</button>
+    <button type="submit" id="update-skin-post" class="btn btn-secondary">Update Post</button>
     <button type="button" id="delete-skin-post" class="btn btn-danger">Delete Post</button>
   </form>
 </main>
