--- a/views/post.handlebars
+++ b/views/post.handlebars
@@ -18,7 +18,7 @@
           placeholder="Add a comment..."
         ></textarea>
       </div>
-      <button type="submit" class="btn btn-primary">Submit</button>
+      <button type="submit" class="btn btn-secondary">Submit</button>
     </form>
   {{/if}}
   <h2 class="custom-text-color">Comment History:</h2>
