--- a/views/newpost.handlebars
+++ b/views/newpost.handlebars
@@ -29,7 +29,7 @@
       ></textarea>
     </div>
     <div class="mb-3">
-      <button type="submit" class="btn btn-primary">Add Book</button>
+      <button type="submit" class="btn btn-secondary">Add Book</button>
     </div>
   </form>
 </div>
