modified minor code

--- a/views/newpost.handlebars
+++ b/views/newpost.handlebars
@@ -25,7 +25,7 @@
         class="form-control"
         id="synopsis-new-skin-post"
         rows="5"
-        placeholder="Enter synopsis here"
+        placeholder="Enter Synopsis"
       ></textarea>
     </div>
     <div class="mb-3">
