added the word 'book' to owner

--- a/views/dashboard.handlebars
+++ b/views/dashboard.handlebars
@@ -13,7 +13,7 @@
         {{title}}
       </a></h2>
       <p class="custom-text-color">By: {{author}}</p>
-      <p class="text-dark">Owner: {{user.username}} | Date: {{format_date createdAt}}</p>
+      <p class="text-dark">Book Owner: {{user.username}} | Date: {{format_date createdAt}}</p>
       <a href="/editpost/{{id}}" class="btn btn-secondary">Edit Book</a>
       <button class="btn btn-danger delete-post" data-post-id="{{id}}">Delete</button>
     </div>
