--- a/views/homepage.handlebars
+++ b/views/homepage.handlebars
@@ -10,7 +10,7 @@
             </h2>
           </div>
           <div class="card-body text-dark">
-            <p>Owner: {{user.username}} Date: {{format_date createdAt}}</p>
+            <p>Book Owner: {{user.username}} Date: {{format_date createdAt}}</p>
           </div>
         </div>
       </div>
