--- a/views/post.handlebars
+++ b/views/post.handlebars
@@ -3,7 +3,7 @@
   <article>
     <h1 class="custom-text-color">{{title}}</h1>
     <p class="custom-text-color">By: {{author}}</p>
-    <p class="custom-text-color" style="font-style: italic;">Owner: {{user.username}} | Date: {{format_date createdAt}}</p>
+    <p class="custom-text-color" style="font-style: italic;">Book Owner: {{user.username}} | Date: {{format_date createdAt}}</p>
     <p class="text-dark">{{synopsis}}</p>
   </article>
   {{#if logged_in}}
