debug the code so that the synopsis will appear during editing

--- a/views/editpost.handlebars
+++ b/views/editpost.handlebars
@@ -28,7 +28,7 @@
         id="synopsis-update-skin-post"
         rows="3"
         placeholder="Enter Synopsis"
-      >{{content}}</textarea>
+      >{{synopsis}}</textarea>
     </div>
     <button type="submit" id="update-skin-post" class="btn btn-secondary">Update Post</button>
     <button type="button" id="delete-skin-post" class="btn btn-danger">Delete Post</button>
