--- a/views/editpost.handlebars
+++ b/views/editpost.handlebars
@@ -31,6 +31,6 @@
       >{{synopsis}}</textarea>
     </div>
     <button type="submit" id="update-skin-post" class="btn btn-secondary">Update Post</button>
-    <button type="button" id="delete-skin-post" class="btn btn-danger">Delete Post</button>
+    <button type="button" id="delete-skin-post" class="btn bg-custom-delete">Delete Post</button>
   </form>
 </main>
