Restaged the logo.

--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -16,8 +16,8 @@
     <header>
       <nav class="navbar navbar-expand-lg navbar-dark bg-light-gray text-dark">
         <div class="container-fluid">
-          <a class="navbar-brand fs-2" href="/">
-            <img src="/images/book-loom-logo.gif" alt="Book Loom Logo" style="height: 80px;">
+          <a class="navbar-brand fs-5" href="/">
+            <img src="/images/book-loom-logo.gif" alt="Book Loom Logo" style="height: 80px; margin-left: 4rem;">
           </a>
           <button
             class="navbar-toggler"
@@ -31,7 +31,7 @@
             <span class="navbar-toggler-icon"></span>
           </button>
           <div class="collapse navbar-collapse" id="navbarNav">
-            <ul class="navbar-nav ms-auto">
+            <ul class="navbar-nav ms-auto" style="margin-right: 4rem;">
               <li class="nav-item">
                 <a class="nav-link" href="/">Home</a>
               </li>
