Modified the delete button hover color.

--- a/public/css/dashboard.css
+++ b/public/css/dashboard.css
@@ -48,11 +48,11 @@
   }
 
   .bg-custom-delete {
-    background-color: #BD8376 !important;
+    background-color: #967259 !important;
   }
   
   .bg-custom-delete:hover {
-    background-color: #A0665A !important;
+    background-color: #8C664D !important;
   }
 
   .custom-text-color {
