used 'book' in codes for consistency

--- a/views/editpost.handlebars
+++ b/views/editpost.handlebars
@@ -1,36 +1,36 @@
 <main class="container mt-5">
   <h1 class="mb-4 text-dark">Edit Post</h1>
-  <form class="update-skin-post-form" class="mb-3">
+  <form class="update-book-post-form" class="mb-3">
     <div class="mb-3">
-      <label for="title-update-skin-post" class="form-label custom-text-color">Title</label>
+      <label for="title-update-book-post" class="form-label custom-text-color">Title</label>
       <input
         type="text"
         class="form-control"
-        id="title-update-skin-post"
+        id="title-update-book-post"
         placeholder="Enter Book"
         value="{{title}}"
       />
     </div>
     <div class="mb-3">
-      <label for="author-update-skin-post" class="form-label custom-text-color">Author</label>
+      <label for="author-update-book-post" class="form-label custom-text-color">Author</label>
       <input
         type="text"
         class="form-control"
-        id="author-update-skin-post"
+        id="author-update-book-post"
         placeholder="Enter Author"
         value="{{author}}"
       />
     </div>
     <div class="mb-3">
-      <label for="synopsis-update-skin-post" class="form-label custom-text-color">Synopsis</label>
+      <label for="synopsis-update-book-post" class="form-label custom-text-color">Synopsis</label>
       <textarea
         class="form-control"
-        id="synopsis-update-skin-post"
+        id="synopsis-update-book-post"
         rows="3"
         placeholder="Enter Synopsis"
       >{{synopsis}}</textarea>
     </div>
-    <button type="submit" id="update-skin-post" class="btn btn-secondary">Update Post</button>
-    <button type="button" id="delete-skin-post" class="btn bg-custom-delete">Delete Post</button>
+    <button type="submit" id="update-book-post" class="btn btn-secondary">Update Post</button>
+    <button type="button" id="delete-book-post" class="btn bg-custom-delete">Delete Post</button>
   </form>
 </main>
