--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -1,12 +1,12 @@
 <main class="container mt-5">
   <h1 class="mb-4 text-dark">Login</h1>
-  <form class="skin-login-form">
+  <form class="book-login-form">
     <div class="mb-3">
       <label for="username" class="form-label custom-text-color">Username</label>
       <input
         type="text"
         class="form-control"
-        id="username-skin-login"
+        id="username-book-login"
         placeholder="Username"
       />
     </div>
@@ -15,7 +15,7 @@
       <input
         type="password"
         class="form-control"
-        id="password-skin-login"
+        id="password-book-login"
         placeholder="Password"
       />
     </div>
