--- a/views/newpost.handlebars
+++ b/views/newpost.handlebars
@@ -1,29 +1,29 @@
 <div class="container mt-5">
   <h2 class="mb-4 text-dark">Create a Book Contribution.</h2>
-  <form class="new-skin-post-form">
+  <form class="new-book-post-form">
     <div class="mb-3">
-      <label for="title-new-skin-post" class="form-label custom-text-color">Title:</label>
+      <label for="title-new-book-post" class="form-label custom-text-color">Title:</label>
       <input
         type="text"
         class="form-control"
-        id="title-new-skin-post"
+        id="title-new-book-post"
         placeholder="Enter the Book Title"
       />
     </div>
     <div class="mb-3">
-      <label for="author-new-skin-post" class="form-label custom-text-color">Author:</label>
+      <label for="author-new-book-post" class="form-label custom-text-color">Author:</label>
       <input
         type="text"
         class="form-control"
-        id="author-new-skin-post"
+        id="author-new-book-post"
         placeholder="Enter the Author"
       />
     </div>
     <div class="mb-3">
-      <label for="synopsis-new-skin-post" class="form-label custom-text-color">Synopsis:</label>
+      <label for="synopsis-new-book-post" class="form-label custom-text-color">Synopsis:</label>
       <textarea
         class="form-control"
-        id="synopsis-new-skin-post"
+        id="synopsis-new-book-post"
         rows="5"
         placeholder="Enter Synopsis"
       ></textarea>
