--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -40,7 +40,7 @@
               </li>
               {{#if logged_in}}
                 <li class="nav-item">
-                  <a class="nav-link" href="#" id="skin-logout">Logout</a>
+                  <a class="nav-link" href="#" id="book-logout">Logout</a>
                 </li>
               {{else}}
                 <li class="nav-item">
