--- a/views/post.handlebars
+++ b/views/post.handlebars
@@ -7,13 +7,13 @@
     <p class="text-dark">{{synopsis}}</p>
   </article>
   {{#if logged_in}}
-    <form class="new-skin-comment-form" class="mb-3">
+    <form class="new-book-comment-form" class="mb-3">
       <div class="mb-3">
         <label for="comment" class="form-label text-dark">Comments:</label>
         <textarea
           class="form-control"
           style="font-style: italic;"
-          id="content-new-skin-comment"
+          id="content-new-book-comment"
           rows="3"
           placeholder="Add a comment..."
         ></textarea>
