--- a/views/signup.handlebars
+++ b/views/signup.handlebars
@@ -1,6 +1,6 @@
 <main class="container mt-5">
   <h1 class="mb-4 text-dark">Sign Up</h1>
-  <form id="signup-form" class="skin-signup-form">
+  <form id="signup-form" class="book-signup-form">
     <div class="mb-3">
       <label for="username" class="form-label custom-text-color">Username:</label>
       <input
