Enhanced the card properties.

--- a/views/homepage.handlebars
+++ b/views/homepage.handlebars
@@ -3,7 +3,7 @@
   <div class="row">
     {{#each posts}}
       <div class="col-md-4">
-        <div class="card mb-3">
+        <div class="card custom-card mb-3">
           <div class="card-header bg-custom">
             <h2 class="card-title">
               <a href="/post/{{id}}" class="text-dark text-decoration-none">{{title}}</a>
