--- a/public/css/dashboard.css
+++ b/public/css/dashboard.css
@@ -14,6 +14,10 @@
     border-radius: 0.5em;
   }
 
+  .custom-card:hover{
+    box-shadow: 0 0 15px 5px #8A817B; /* Glow effect */
+  }
+
   .bg-light-gray {
     background-color: rgba(200, 200, 200, 0.5); /* Light gray with 50% opacity */
   }
