--- a/views/homepage.handlebars
+++ b/views/homepage.handlebars
@@ -1,6 +1,11 @@
 <main class="container mt-5">
   <h1 class="mb-4 text-black">Library</h1>
-  <div class="row">
+  <div class="row mb-4">
+    <div class="col-12">
+      <input type="text" id="search-input" class="form-control" placeholder="Search for a book...">
+    </div>
+  </div>
+  <div class="row" id="posts-container">
     {{#each posts}}
       <div class="col-md-4">
         <div class="card mb-3">
@@ -17,3 +22,6 @@
     {{/each}}
   </div>
 </main>
+<script src="/js/search.js"></script>
+
+
